OSSN - OPEN SOURCE SOCIAL NETWORK 3.0-development

Bugfixes:
 * Can not delete profile cover #427   
 * Don't listup all users if search query is empty

Additions:
	
 * Implementd plugins for components.
 * Browser css cache issue.
 * Store profile image in computer cache
 * Store profile cover in computer cache
 * Store photos on wall into cache
 * Store group cover into cache.
 * Get object that are requried only (offset)
 * Get entities that are required only (offset)
 * Get annotation that are required only (offset)
 * Allow users to login with email also
 * Allow admins to search unvalidated users.
 * New backend theme