@@ -2,3 +2,4 @@
 /configurations/ossn.config.db.php
 /configurations/ossn.config.site.php
 /installation/INSTALLED
+/.htaccess
